# ChangeLog for media-fonts/unifont
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-fonts/unifont/ChangeLog,v 1.41 2013/11/04 20:48:35 floppym Exp $

  04 Nov 2013; Mike Gilbert <floppym@gentoo.org> unifont-6.3.20131006.ebuild,
  unifont-6.3.20131020.ebuild:
  Add build-time dep on x11-apps/bdftppcf.

  04 Nov 2013; Mike Gilbert <floppym@gentoo.org> unifont-6.3.20131020.ebuild:
  Fix SRC_URI.

*unifont-6.3.20131020 (02 Nov 2013)

  02 Nov 2013; Mike Gilbert <floppym@gentoo.org> +unifont-6.3.20131020.ebuild:
  Version bump.

*unifont-6.3.20131006 (21 Oct 2013)

  21 Oct 2013; Mike Gilbert <floppym@gentoo.org> +unifont-6.3.20131006.ebuild,
  metadata.xml:
  Version bump; hard masked because of bug 488642.

  08 Jan 2012; Ryan Hill <dirtyepic@gentoo.org> -unifont-1.0-r4.ebuild,
  unifont-5.1.20080914.ebuild:
  Stabilize on ppc/ppc64 (bug #393767). Fix LICENCE (bug #395179). Remove old.

  18 Dec 2011; Raúl Porcel <armin76@gentoo.org> unifont-5.1.20080914.ebuild:
  alpha/ia64/s390/sh/sparc stable wrt #393767

  15 Dec 2011; Agostino Sarubbo <ago@gentoo.org> unifont-5.1.20080914.ebuild:
  Stable for AMD64, wrt bug #393767

  14 Dec 2011; Markus Meier <maekke@gentoo.org> unifont-5.1.20080914.ebuild:
  arm stable, bug #393767

  14 Dec 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  unifont-5.1.20080914.ebuild:
  x86 stable wrt bug #393767

  02 Feb 2010; Tomáš Chvátal <scarabeus@gentoo.org>
  unifont-5.1.20080914.ebuild:
  Drop removed command from ebuild.

*unifont-5.1.20080914 (31 Dec 2008)

  31 Dec 2008; MATSUU Takuto <matsuu@gentoo.org>
  +files/unifont-5.1.20080914-gentoo.patch, -unifont-1.0-r3.ebuild,
  +unifont-5.1.20080914.ebuild:
  Version bumped, bug #236101. Removed old version.

  16 Jun 2008; Joseph Jezak <josejx@gentoo.org> unifont-1.0-r4.ebuild:
  Marked ppc stable.

  21 Mar 2008; Samuli Suominen <drac@gentoo.org> unifont-1.0-r4.ebuild:
  amd64 stable
