@@ -7,13 +7,13 @@ DIST unifont-6.3.20131006.tar.gz 8199388 SHA256 d7274e2092f5d756900201cb218b33b6
 DIST unifont-6.3.20131020.tar.gz 9177825 SHA256 fd8bc3d612e3353babe1b37c602f843b3bea624b3a67918c712b71692afcc305 SHA512 3ce9db5e01daefc41a1bd8ecfee71913e8132f7ed72507fdfa756c8081b97cfc10a48d880ecebd9737015ed7e0932fa847dd77f04633582a1a05980a4744e34b WHIRLPOOL f7ca4b6cd913145512a5409c7ddba5872a303f97ae73193fbed28d44ccedf11517b51d4497dfb3710a80dc704333f182d4001656419f62b3c91140b6d7953c27
 EBUILD unifont-5.1.20080914.ebuild 829 SHA256 b3028e14003addf659eb0531866f400a985eebf7e72c5129f78afe8b1d2465c7 SHA512 ed6cbcc46b2172c5a5afec7ce6d4bedf2d133927c5ac8fcab8f52b5f7a9787ce9bf2990dd20576410cfebb7e3d4ea05ebd4038f5958df04175c96d7d6aec45ac WHIRLPOOL e569273f38530d224357148cad94a60e3637e8159788db9addfa0e3306782ace998ec585916b7285b731e59cea0569fdd637fa778b25c19b0b57ee81df37802b
 EBUILD unifont-6.3.20131006.ebuild 1026 SHA256 a609e84dbc46d933344b3f3fb8e9e6acd6980aea77e4aca25ef75eb2cc6b7021 SHA512 df8b058df645eeeda09a28fc6eaf7794fab3777253536e59d64c4eca7831c3fc9896459f2a61eb63b5adfee5accaea91de969c1a5e2dea911ba23c1ea7a8dc2a WHIRLPOOL 138f48b8d5fe27a9403365672dceebb75065075002ed752bc7fd0abb7ce8e8c83a51e9715e90c4454b770dd6a66e34b6f9327d97f2c97685a894a4c8b508023e
-EBUILD unifont-6.3.20131020.ebuild 1037 SHA256 e9046304a05cbff91d1e1baae12b5ae4dc4597b6a91fa08ce3c384861f3dc271 SHA512 c019aab9021386ac643d8083721b465535fce4a7845f46fa864e471d9cd5c036ebea5dd8bb5ae046fc9ee49fee4fc571294080bddc60067a5c388061c8af0439 WHIRLPOOL 5bcb0a11228696faadfb14e9c06a92f7fda0898b62696fae388f0d9dcb1c70b808b4c646f4b2c4fa8fd1941073dc4ee7014f9f3fa61744732f866d1ac92278ea
-MISC ChangeLog 5082 SHA256 7f7288f7c9502a20d7414392f853ba2a7eae4464290f928dec2c8e6794054e4b SHA512 82dbd235b260ca41179263d9b8b007a6c7690503b87b8b887582d15aa809a94da003485c14cc928208fa9ed321c4d8a74eadc10a41c14d6203fc0032976f2204 WHIRLPOOL 3ff628e5759dd41d6a43f22134cd643d4a88109214ac95cafc94612421bd95984a7f0847b6fe5c958872792605d9d63840de9fc745cc5293d4a16b481d13e966
-MISC metadata.xml 281 SHA256 d0257357df80bda41bfdd6e52859583dcad8e59aae506b0de45abc6bb1ab8aa1 SHA512 1b4ca6c5f9e5d0df2dbe9a1975ac95ada60e733b8e002d9c60bdc3e11ad75315c92934bcac23ba3a17884656b6db89f63d00fba65a8d83679d87aec7bb9a52bb WHIRLPOOL 1117e329de77e899e196acdebfce5a1f5d91a98f75c361dbd1104cecab23cc7ba90e71094dab9e7a430054f90ccfe9f1e8fc238498fe8d380d4a09e70dd81b8d
+EBUILD unifont-6.3.20131020.ebuild 1122 SHA256 a421e0af663d89f092d414a3246e1cf28a0d9ff1d7ad48cc91d7bc5e657e3eea SHA512 a01226f89a212e7cac46c679eed2623d5fbc3ded14adab40b342be74b6bbcb84c256658074ada472ea20b7d7da7ce750476a89e62141b7087cf759c0e07a04b9 WHIRLPOOL fad3fd974d66fcf7cbeb19363ec56eea5dbbb3d32fb875fcede1a7b675b8b09d989bc03374a12c1ce3daf9d7c85bcd50059112f710528ef8c7cd5618c3b3be92
+MISC ChangeLog 5204 SHA256 6b070dcc9ab4b3b8a5c418d2f9af965b7ce64b9990facf5c1299a16aecb9530a SHA512 ab8bd514f252761b4dd954540618fd301e37444aeb10358ee2fae37bcdfe5145f44e1eef525212700cf7003cf473535cdb817cadad2d57790d971977a86f3c3d WHIRLPOOL 2cdfde629a39d8ae8053e4fb7cded7c800a31df09aafd2cbb52b14dfd33b8aa9f033e92185546d75aecfd1f191630845c4e152a5c1084da02451fca078b59bf7
+MISC metadata.xml 334 SHA256 657867f31c5bd8ef0a54d78c378f9df1780fed58c965546346ab8a1ed1ea75d5 SHA512 ddf528bfb06cfa89039ea78732748f0fa06b6214e3f2d37cbbee0289428c2cba4e86f17340adb7ae082d8e285ba9ec6576cd0cd4d1d336dedb0dbaa3ff4ebee7 WHIRLPOOL 8265305fb0da67d6687a3f14a7fd23cbb28d7721ef47d57b5240c338446276c74a15ee645d4ed9658d5df9ae43871d303f8529971da4869967d9e16fbe0f0671
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iF4EAREIAAYFAlJ4CCQACgkQC77qH+pIQ6TZ0AD9Fjzi/ZRR0TZ76okLEEG1+08x
-+TrRqkmW7Bj8dJXrJpUA+wV8eLqtFzyhzeJ4QlBVCnjNln3FYDslPaV7HYjs9LXU
-=6B5u
+iF4EAREIAAYFAlKj1+YACgkQC77qH+pIQ6R1WAD8DgjnMZT0L8hqGqrS/5IAUEQ7
+fXHyC6yHb/MCGxKN1GUBALr9/DEO9oBQSoWs6sfOaQ4giVzgwfTLhlYSAN0x4UGD
+=RzAr
 -----END PGP SIGNATURE-----
