@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-fonts/unifont/unifont-6.3.20131020.ebuild,v 1.3 2013/11/04 20:48:35 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-fonts/unifont/unifont-6.3.20131020.ebuild,v 1.4 2013/12/08 02:22:29 floppym Exp $
 
 EAPI=5
 
@@ -13,15 +13,18 @@ SRC_URI="http://unifoundry.com/pub/${P}/${P}.tar.gz"
 LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS="~alpha ~amd64 ~arm ~ia64 ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~x86-fbsd"
-IUSE="fontforge"
+IUSE="fontforge utils"
 
 DEPEND="
 	fontforge? (
+		dev-lang/perl
 		media-gfx/fontforge
 		x11-apps/bdftopcf
 	)
 "
-RDEPEND=""
+RDEPEND="
+	utils? ( dev-lang/perl )
+"
 
 src_prepare() {
 	sed -i -e 's/install -s/install/' src/Makefile || die
@@ -43,6 +46,7 @@ src_install() {
 		TTFDEST="${ED%/}${FONTDIR}"
 		USRDIR=usr
 	)
+	use utils || makeargs+=( -C font )
 	emake -j1 "${makeargs[@]}" install
 	font_xfont_config
 	font_fontconfig
