@@ -1,12 +1,13 @@
 DEFINED_PHASES=compile install postinst postrm prepare setup
-DEPEND=fontforge? ( media-gfx/fontforge x11-apps/bdftopcf ) X? ( x11-apps/mkfontdir media-fonts/encodings )
+DEPEND=fontforge? ( dev-lang/perl media-gfx/fontforge x11-apps/bdftopcf ) X? ( x11-apps/mkfontdir media-fonts/encodings )
 DESCRIPTION=GNU Unifont - a Pan-Unicode X11 bitmap iso10646 font
 EAPI=5
 HOMEPAGE=http://unifoundry.com/
-IUSE=fontforge X
+IUSE=fontforge utils X
 KEYWORDS=~alpha ~amd64 ~arm ~ia64 ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~x86-fbsd
 LICENSE=GPL-2
+RDEPEND=utils? ( dev-lang/perl )
 SLOT=0
 SRC_URI=http://unifoundry.com/pub/unifont-6.3.20131020/unifont-6.3.20131020.tar.gz
 _eclasses_=eutils	a82a329b538368791f5a6113c60e557e	font	37271e0911f39dd15a28adcaf94f6956	multilib	892e597faee02a5b94eb02ab512e7622	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=3da249499f58103b0e6d9036d0d1d870
+_md5_=863d503bfe39e1c6edfb4ac40e5df686
