@@ -1,6 +1,10 @@
 # ChangeLog for media-fonts/unifont
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-fonts/unifont/ChangeLog,v 1.41 2013/11/04 20:48:35 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-fonts/unifont/ChangeLog,v 1.42 2013/12/08 02:22:29 floppym Exp $
+
+  08 Dec 2013; Mike Gilbert <floppym@gentoo.org> metadata.xml,
+  unifont-6.3.20131020.ebuild:
+  Make utilities optional.
 
   04 Nov 2013; Mike Gilbert <floppym@gentoo.org> unifont-6.3.20131006.ebuild,
   unifont-6.3.20131020.ebuild:
